<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/bgLayout"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:background="@drawable/top_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:contentDescription="@string/txt_back_detail" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="195dp"
        android:layout_height="114dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/txt_welcome"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/bgLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bgLayout"
        app:layout_constraintVertical_bias="0.583" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/title_login"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bgLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/transparent"
        android:hint="@string/prompt_email"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/transparent"
        android:hint="@string/prompt_password"
        android:layout_marginTop="15dp"
        app:endIconMode="password_toggle"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="#EB3B65"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txt_masuk"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

</androidx.constraintlayout.widget.ConstraintLayout>