<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_baseline_pending_actions_24" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_dokter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/dokter"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="16sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/tv_poliklinik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/poliklinik"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:id="@+id/debitur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/debitur"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/waktu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/waktu"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="12sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>