<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_reg_ok"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_no_rm"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="12345678"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"/>

        <Button
            android:id="@+id/btn_reg_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/txt_ok"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="20sp"
            android:textColor="#FAA625"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>